# ChangeLog for dev-ruby/thinking-sphinx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.14.ebuild:
  Remove old version.

*thinking-sphinx-1.3.16 (03 Mar 2010)

  03 Mar 2010; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.16.ebuild:
  Version bump.

  11 Feb 2010; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.8.ebuild, -thinking-sphinx-1.3.13.ebuild:
  Remove old versions.

*thinking-sphinx-1.3.14 (09 Jan 2010)

  09 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.14.ebuild:
  Version bump.

*thinking-sphinx-1.3.13 (15 Dec 2009)

  15 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.13.ebuild:
  Version bump.

*thinking-sphinx-1.3.8 (06 Dec 2009)

  06 Dec 2009; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.3.8.ebuild, +metadata.xml:
  Version bump. Renamed from freelancing-gods-thinking-sphinx to follow
  upstream convention now that it is reeleased as a normal gem on gemcutter.
