@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*thinking-sphinx-1.3.20 (23 Sep 2010)
+
+  23 Sep 2010; Hans de Graaff <graaff@gentoo.org>
+  +thinking-sphinx-1.3.20.ebuild:
+  Version bump.
+
   05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
   -thinking-sphinx-1.3.14.ebuild:
   Remove old version.
